# qvac-chimera

./: .gitignore  .gitmodules  README.md  REMOTE_APIS.md
.github/workflows/: build-all.yml  build-desktop.yml  build-mobile.yml  test-apk-browserstack.yml  test-apk-lambdatest.yml  test-apk-testingbot.yml  test-build.yml
apps/desktop/: .gitignore  README.md  index.html  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/install/: README.md  (+2 more)
cashu/: docker-compose.yml  orchard.toml
chimera-desktop/: package.json
docs/: CONSUMER_HARDWARE_READINESS.md  CPU_EARNINGS_GUIDE.md  GETTING_PAID.md  ROUTSTR.md  UPSTREAM.md  WALLETS_CREATED.md  WALLET_AND_EARNINGS_STATUS.md
providers/: setup-btfs.sh  start-all.sh
qvac/: .dockerignore  Dockerfile  LLMWIKI.md  config.example.json  config.json  deploy-vps.sh  docker-compose.yml  package.json
routstr/: docker-compose.yml
scripts/: audit-demo.js  browserstack-smoke-test.js  fork-upstream.sh  lambdatest-smoke-test.js  start-openviking-shim.sh  testingbot-smoke-test.js  update-tasking-forks.sh
sdk/: README.md  package.json
website/: console.html  demo-wiki.html  deploy.html  deployments.html  earnings.html  index.html  sdl-builder.html  sitemap.xml  templates.html
website-new/: README.md  console.html  demo-wiki.html  deploy.html  deployments.html  earnings.html  index.html  providers.html  rental.html  robots.txt  sdl-builder.html  sitemap.xml  templates.html
(+334 files in other folders)
